# cpp_demos

./: Readme.md  clean.sh  clean_and_git_push.sh
00_fundamental/: 01_helloworld.cpp  02_data_types.cpp  03_loop.cpp  03_unblock_input.cpp  04_function.cpp  04_function1.cpp  05_string.cpp  06_pointer_and_ref.cpp  07_time.cpp  08_struct.cpp  09_about_args.cpp  pointer.cpp  wchar_t.cpp
01_class_and_more/: shared_ptr.cpp  unique_ptr.cpp  unique_ptr_1.cpp
02_array/: array_shift_value.cpp  array_shift_value_2.cpp  array_shift_value_3.cpp
03_thread/: POSIX.md  Readme.md  demo_pthread1.c  demo_pthread2.c  demo_thread_1.cpp  demo_thread_pool.cpp
03_thread/ThreadPool-master/: README.md
03_thread/lib/: thread_pool.h  thread_pool.md
04_mutex/: Readme.md
05_graphic/: Readme.md  x01_open_a_window.cpp  x01_open_a_window.md  x02_triangle.cpp  x02_triangle.md  x03_matrix.cpp  x03_matrix.md  x04_cube.cpp  x04_cube.md
05_graphic/lib/: loadShader.hpp
05_graphic/shader/: SimpleF.glsl  SimpleFx04.glsl  SimpleV.glsl  SimpleVx03.glsl  SimpleVx04.glsl
07_algorithm/: Readme.md
CallBack/: class_callback.cpp  main.cpp  std_bind1.cpp  std_bind2.cpp
c/: Wrapping C++ objects in C.html
doc/: win环境配置.md
ffmpeg/: AudioToPCM_4x.cpp  CMakeLists.txt  Readme.md  av_io_context.md  avio_read.cpp
ffmpeg/deprecated/: 01_decode.cpp
ffmpeg/samples/: android_ff_complie_sample.sh
ffmpeg/simple_player/: CMakeLists.txt  main.cpp
fstream/: 01_save_a_file.cpp  02_load_a_file.cpp  03_seek_file.cpp  04_read_binary_file.cpp
jni/: callback.c
媒体相关算法/: Readme.md  dwt.c
